--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=proyecto-banco
 server.port=8081
-spring.datasource.url=jdbc:mariadb://localhost:3307/db_banco
+spring.datasource.url=jdbc:mariadb://db-banco.c5qwm04ok9y6.us-east-2.rds.amazonaws.com:3307/db_banco
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create
+# root12345
